# vulkan

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  README-macOS.md  README.md  default.nix  genvulkan.cabal  nixpkgs.json  result  result-4  stack.yaml  vulkan.nix
app/: Main.hs
genvulkan/: README.md  cabal.project  default.nix  genvulkan.cabal  stack.yaml
genvulkan/app/: Main.hs
genvulkan/src/: ProcessVkXml.hs  Write.hs
genvulkan/src/VkXml/: CommonTypes.hs  Parser.hs  Sections.hs
genvulkan/src/VkXml/Sections/: Commands.hs  Enums.hs  Extensions.hs  Feature.hs  Platforms.hs  SPIRV.hs  Tags.hs  Types.hs  VendorIds.hs
genvulkan/src/Write/: Cabal.hs  Commands.hs  Extension.hs  Feature.hs  ModuleWriter.hs  Types.hs
genvulkan/src/Write/Types/: Define.hs  Enum.hs  Funcpointer.hs  Handle.hs  Struct.hs  Union.hs
genvulkan/src/Write/Util/: DeclaredNames.hs  NFData.hs
nix/: default-darwin.nix  lunarSDK.nix  vulkan-darwin.nix  vulkan.nix
src/: ProcessVkXml.hs  Write.hs
src/VkXml/: CommonTypes.hs  Parser.hs  Sections.hs
src/VkXml/Sections/: Commands.hs  Enums.hs  Extensions.hs  Feature.hs  Tags.hs  Types.hs  VendorIds.hs
src/Write/: Enums.hs  ModuleWriter.hs  Types.hs
src/Write/Types/: Enum.hs  Enums.hs  Funcpointer.hs  Handle.hs
vulkan-api/: README.md  Setup.hs  default.nix  stack.yaml  vulkan-api.cabal
vulkan-api/cbits/: vulkan_loader.c
vulkan-api/include/: vulkan_loader.h
vulkan-api/include/vulkan/: vulkan.h
vulkan-api/src-gen/Graphics/Vulkan/: Base.hsc  Commands.hs  Common.hs  Common.hsc  Constants.hs  Core.hsc  Core_1_0.hsc  Core_1_1.hs  Core_1_2.hs  Ext.hs  SimpleTypes.hs  StructMembers.hs
vulkan-api/src-gen/Graphics/Vulkan/Ext/: VK_AMD_buffer_marker.hs  VK_AMD_device_coherent_memory.hs  VK_AMD_display_native_hdr.hs  VK_AMD_draw_indirect_count.hs  VK_AMD_draw_indirect_count.hsc  VK_AMD_extension_134.hsc  VK_AMD_extension_135.hsc  VK_AMD_extension_136.hsc  VK_AMD_extension_139.hsc  VK_AMD_extension_140.hsc  VK_AMD_extension_142.hsc  VK_AMD_extension_143.hsc  VK_AMD_extension_17.hsc  VK_AMD_extension_18.hsc  VK_AMD_extension_180.hsc  VK_AMD_extension_181.hsc  VK_AMD_extension_182.hsc  VK_AMD_extension_183.hsc  VK_AMD_extension_184.hsc  VK_AMD_extension_185.hsc  VK_AMD_extension_186.hsc  VK_AMD_extension_187.hsc  VK_AMD_extension_188.hsc  VK_AMD_extension_189.hsc  VK_AMD_extension_190.hsc  VK_AMD_extension_20.hsc  VK_AMD_extension_24.hsc  VK_AMD_extension_25.hsc  VK_AMD_extension_32.hsc  VK_AMD_extension_33.hsc  VK_AMD_extension_35.hsc  VK_AMD_extension_39.hsc  VK_AMD_extension_40.hsc  VK_AMD_extension_41.hsc  VK_AMD_extension_44.hsc  VK_AMD_extension_45.hsc  VK_AMD_extension_46.hsc  VK_AMD_gcn_shader.hs  VK_AMD_gcn_shader.hsc  VK_AMD_gpu_shader_half_float.hs  (+372 more)
vulkan-api/src-gen/Graphics/Vulkan/Types/: BaseTypes.hs  Bitmasks.hs  Defines.hs  Funcpointers.hs  Handles.hs  Include.hs  StructMembers.hs
vulkan-api/src-gen/Graphics/Vulkan/Types/Enum/: AccelerationStructure.hs  AccessFlags.hs  AcquireProfilingLockFlagsKHR.hs  Attachment.hs  Blend.hs  BorderColor.hs  Buffer.hs  BuildAccelerationStructureFlag.hs  ChromaLocation.hs  CoarseSampleOrderTypeNV.hs  Color.hs  Command.hs  CompareOp.hs  Component.hs  ComponentSwizzle.hs  CompositeAlphaFlagsKHR.hs  ConditionalRenderingFlagsEXT.hs  ConservativeRasterizationModeEXT.hs  CopyAccelerationStructureMode.hs  Coverage.hs  CoverageModulationModeNV.hs  CullModeFlags.hs  Debug.hs  DependencyFlags.hs  Descriptor.hs  Device.hs  DiscardRectangleModeEXT.hs  Display.hs  DriverId.hs  DynamicState.hs  External.hs  Fence.hs  Filter.hs  Format.hs  FramebufferCreateFlagBits.hs  FramebufferCreateFlags.hs  FrontFace.hs  FullScreenExclusiveEXT.hs  Geometry.hs  Image.hs  (+218 more)
vulkan-api/src-gen/Graphics/Vulkan/Types/Struct/: AabbPositionsNV.hs  AccelerationStructure.hsc  Acquire.hsc  AcquireNextImageInfoKHR.hsc  AllocationCallbacks.hsc  ApplicationInfo.hsc  Attachment.hsc  Base.hsc  Bind.hsc  Buffer.hsc  CalibratedTimestampInfoEXT.hsc  CheckpointDataNV.hsc  Clear.hsc  Cmd.hsc  CoarseSample.hsc  Command.hsc  ComponentMapping.hsc  ComputePipelineCreateInfo.hsc  ConditionalRenderingBeginInfoEXT.hsc  ConformanceVersion.hsc  CooperativeMatrixPropertiesNV.hsc  CopyDescriptorSet.hsc  Debug.hsc  DebugUtilsLabelEXT.hsc  DebugUtilsMessengerCallbackDataEXT.hsc  DebugUtilsMessengerCreateInfoEXT.hsc  DebugUtilsObjectNameInfoEXT.hsc  DedicatedAllocation.hsc  Descriptor.hsc  Device.hsc  DispatchIndirectCommand.hsc  Display.hsc  Draw.hsc  DrawInd.hsc  DrmFormatModifierProperties.hsc  EnableBetaExtensions.hs-boot  EnableBetaExtensions.hsc  EventCreateInfo.hsc  Export.hsc  ExtensionProperties.hsc  (+533 more)
vulkan-api/src/Graphics/: Vulkan.hs
vulkan-api/src/Graphics/Vulkan/: Marshal.hs
vulkan-api/src/Graphics/Vulkan/Marshal/: Create.hs  InstanceProc.hs  Internal.hs  Proc.hs
vulkan-examples/: 01-CreateInstance.hs  02-GLFWWindow.hs  03-LogicalDevice.hs  04-Presentation.hs  05-GraphicsPipeline.hs  06-Drawing.hs  LICENSE  Lib.hs  default.nix  stack.yaml  vulkan-examples.cabal
vulkan-examples/Lib/: GLFW.hs  Utils.hs  Vulkan.hs
vulkan-examples/Lib/Utils/: TH.hs
vulkan-examples/Lib/Vulkan/: Pipeline.hs  Presentation.hs
vulkan-triangles/: .gitignore  default.nix  profile.sh  stack.yaml  vulkan-triangles.cabal
vulkan-triangles/app/: Main.hs
vulkan-triangles/shaders/: triangle.frag  triangle.vert
vulkan-triangles/src/: Lib.hs
vulkan-triangles/src/Lib/: GLFW.hs  Program.hs  Vulkan.hs
vulkan-triangles/src/Lib/Program/: Foreign.hs
vulkan-triangles/src/Lib/Vulkan/: Buffer.hs  Command.hs  Descriptor.hs  Device.hs  Drawing.hs  Image.hs  Instance.hs  Pipeline.hs  Presentation.hs  Shader.hs  Sync.hs  TransformationObject.hs  Vertex.hs  VertexBuffer.hs
vulkan-triangles/src/Lib/Vulkan/Shader/: TH.hs
