name:                genvulkan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/achirkin/genvulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Chirkin
maintainer:          chirkin@arch.ethz.ch
copyright:           Copyright: (c) 2017 Artem Chirkin
category:            vulkan, bsd3, graphics, library, opengl
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ProcessVkXml
                       VkXml.Parser
                       VkXml.CommonTypes
                       VkXml.Sections.Types
                       VkXml.Sections.Enums
                       VkXml.Sections.Commands
                       VkXml.Sections.Feature
                       VkXml.Sections.VendorIds
                       VkXml.Sections.Tags
  build-depends:       base >= 4.7 && < 5
                     , path -any
                     , path-io -any
                     , template-haskell -any
                     , xml-conduit -any
                     , conduit -any
                     , conduit-extra >=0.3
                     , xml-types -any
                     , resourcet -any
                     , transformers -any
                     , containers -any
                     , text -any
                     , exceptions -any

                     , haskell-src-exts -any
                     , lens -any
                     , mtl -any
                     , transformers -any
                     , template-haskell -any
                     , primitive -any
                     , aeson -any
                     , ghc-prim -any
  default-language:    Haskell2010
  ghc-options:         -Wall

executable genvulkan
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , genvulkan
                     , path -any
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/achirkin/genvulkan
