name:                genvulkan
version:             1.1.3.0
synopsis:            Generate vulkan-api haskell bindings
description:         Generate vulkan-api haskell bindings based on vk.xml
homepage:            https://github.com/achirkin/genvulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Chirkin
maintainer:          chirkin@arch.ethz.ch
copyright:           Copyright: (c) 2018 Artem Chirkin
category:            vulkan, bsd3, graphics, library, opengl
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ProcessVkXml
                       VkXml.Parser
                       VkXml.CommonTypes
                       VkXml.Sections
                       VkXml.Sections.Types
                       VkXml.Sections.Enums
                       VkXml.Sections.Commands
                       VkXml.Sections.Feature
                       VkXml.Sections.VendorIds
                       VkXml.Sections.Tags
                       VkXml.Sections.Extensions
                       VkXml.Sections.Platforms
                       Write
                       Write.Cabal
                       Write.Util.NFData
                       Write.Util.DeclaredNames
                       Write.Commands
                       Write.Feature
                       Write.Extension
                       Write.ModuleWriter
                       Write.Types
                       Write.Types.Define
                       Write.Types.Enum
                       Write.Types.Handle
                       Write.Types.Funcpointer
                       Write.Types.Struct
  other-modules:       Paths_genvulkan
  build-depends:       base >= 4.7 && < 5
                     , path -any
                     , path-io -any
                     , template-haskell -any
                     , xml-conduit -any
                     , conduit -any
                     , conduit-extra >=0.3
                     , xml-types -any
                     , resourcet -any
                     , transformers -any
                     , containers -any
                     , text -any
                     , exceptions -any
                     , mmorph -any
                     , deepseq -any
                     , regex -any

                     , neat-interpolation -any
                     , haskell-src-exts >= 1.20.0
                     , haskell-src-exts-sc -any
                     , pretty -any
                     , lens -any
                     , mtl -any
                     , transformers -any
                     , template-haskell -any
                     , primitive -any
                     , aeson -any
                     , ghc-prim -any
                     , hfmt
  default-language:    Haskell2010
  ghc-options:         -Wall

executable genvulkan
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , genvulkan
                     , path -any
                     , path-io -any
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/achirkin/vulkan
  subdir:   genvulkan
