name:                vulkan-examples
version:             0.2.0.0
synopsis:            Use cases for vulkan-api
description:         Some examples of using vulkan-api bindings.
homepage:            https://github.com/achirkin/genvulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Chirkin
maintainer:          chirkin@arch.ethz.ch
copyright:           Copyright: (c) 2018 Artem Chirkin
category:            vulkan, bsd3, graphics, library, opengl
build-type:          Simple
cabal-version:       >=1.10

executable ve-01-CreateInstance
  hs-source-dirs:      .
  main-is:             01-CreateInstance.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , vulkan-api >= 1.1.3
  default-language:    Haskell2010


executable ve-02-GLFWWindow
  hs-source-dirs:      .
  main-is:             02-GLFWWindow.hs
  other-modules:       Lib.Vulkan
                       Lib.Utils
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , vulkan-api >= 1.1.3
                     , GLFW-b >= 3.2.1
  default-language:    Haskell2010


executable ve-03-LogicalDevice
  hs-source-dirs:      .
  main-is:             03-LogicalDevice.hs
  other-modules:       Lib.Vulkan
                       Lib.Utils
                       Lib.GLFW
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , vulkan-api >= 1.1.3
                     , GLFW-b >= 3.2.1
  default-language:    Haskell2010


executable ve-04-Presentation
  hs-source-dirs:      .
  main-is:             04-Presentation.hs
  other-modules:       Lib.Vulkan
                       Lib.Utils
                       Lib.GLFW
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , vulkan-api >= 1.1.3
                     , GLFW-b >= 3.2.1
                     , containers
  default-language:    Haskell2010


executable ve-05-GraphicsPipeline
  hs-source-dirs:      .
  main-is:             05-GraphicsPipeline.hs
  other-modules:       Lib.Vulkan
                       Lib.Vulkan.Presentation
                       Lib.Utils
                       Lib.Utils.TH
                       Lib.GLFW
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , vulkan-api >= 1.1.3
                     , GLFW-b >= 3.2.1
                     , containers
                     , template-haskell
                     , directory
                     , process
                     , filepath
  default-language:    Haskell2010


executable ve-06-Drawing
  hs-source-dirs:      .
  main-is:             06-Drawing.hs
  other-modules:       Lib.Vulkan
                       Lib.Vulkan.Presentation
                       Lib.Vulkan.Pipeline
                       Lib.Utils
                       Lib.Utils.TH
                       Lib.GLFW
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , vulkan-api >= 1.1.3
                     , GLFW-b >= 3.2.1
                     , containers
                     , template-haskell
                     , directory
                     , process
                     , filepath
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/achirkin/vulkan
  subdir:   vulkan-examples
