name:                vulkan-triangles
version:             0.3.0.0
synopsis:            Haskell-vulkan program rendering triangles
description:         An example of using vulkan-api bindings to create a GLFW window
                     and render some simple geometry.
homepage:            https://github.com/achirkin/genvulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Chirkin
maintainer:          chirkin@arch.ethz.ch
copyright:           Copyright: (c) 2018 Artem Chirkin
category:            vulkan, bsd3, graphics, library, opengl
build-type:          Simple
cabal-version:       >=1.22
extra-source-files:
    shaders/triangle.frag
    shaders/triangle.vert

flag dev
    description:
        Turn on development settings, such as Vulkan validation layers.
    default: True

library
    hs-source-dirs:     src
    exposed-modules:    Lib
                        Lib.GLFW
                        Lib.Program
                        Lib.Program.Foreign
                        Lib.Vulkan.Device
                        Lib.Vulkan.Drawing
                        Lib.Vulkan.Instance
                        Lib.Vulkan.Pipeline
                        Lib.Vulkan.Presentation
                        Lib.Vulkan.Shader
                        Lib.Vulkan.Shader.TH
                        Lib.Vulkan.Vertex
                        Lib.Vulkan.VertexBuffer
    build-depends:      base >= 4.9 && < 5
                      , vulkan-api >= 1.1.3.0
                      , GLFW-b >= 3.2.1
                      , containers
                      , template-haskell
                      , directory
                      , process
                      , filepath
                      , transformers
                      , mtl
                      , monad-logger
                      , easytensor >=1.0.1 && < 2
                      , easytensor-vulkan >=1.0.1 && < 2
                      , dimensions >=1.0.1 && < 2
    default-language:   Haskell2010
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2

executable vulkan-triangles
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -Wall
    build-depends:       base
                       , vulkan-triangles
    default-language:    Haskell2010
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2



source-repository head
    type:     git
    location: https://github.com/achirkin/vulkan
    subdir:   vulkan-triangles
