name:                vulkan-triangles
version:             0.4.0.0
synopsis:            Haskell-vulkan program rendering triangles
description:         An example of using vulkan-api bindings to create a GLFW window
                     and render some simple geometry.
homepage:            https://github.com/achirkin/genvulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Chirkin
maintainer:          chirkin@arch.ethz.ch
copyright:           Copyright: (c) 2018 Artem Chirkin
category:            vulkan, bsd3, graphics, library, opengl
build-type:          Simple
cabal-version:       >=1.22
extra-source-files:
    shaders/triangle.frag
    shaders/triangle.vert

flag dev
    description:
        Turn on development settings, such as Vulkan validation layers.
    default: True

library
    hs-source-dirs:     src
    exposed-modules:    Lib
                        Lib.GLFW
                        Lib.Program
                        Lib.Program.Foreign
                        Lib.Vulkan.Buffer
                        Lib.Vulkan.Command
                        Lib.Vulkan.Descriptor
                        Lib.Vulkan.Device
                        Lib.Vulkan.Drawing
                        Lib.Vulkan.Instance
                        Lib.Vulkan.Pipeline
                        Lib.Vulkan.Presentation
                        Lib.Vulkan.Shader
                        Lib.Vulkan.Shader.TH
                        Lib.Vulkan.Image
                        Lib.Vulkan.Vertex
                        Lib.Vulkan.VertexBuffer
                        Lib.Vulkan.TransformationObject
    build-depends:      base >= 4.11 && < 5
                      , vulkan-api >= 1.2.0.0
                      , GLFW-b >= 3.2.1
                      , containers
                      , template-haskell
                      , directory
                      , process
                      , filepath
                      , transformers
                      , mtl
                      , monad-logger
                      , easytensor >=2 && < 3
                      , easytensor-vulkan >=2 && < 3
                      , dimensions >=2 && < 3
                      , time
                      , JuicyPixels
                      , vector
                      , wavefront
    default-language:   Haskell2010
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2

executable vulkan-triangles
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -Wall
    build-depends:       base
                       , vulkan-triangles
    default-language:    Haskell2010
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2



source-repository head
    type:     git
    location: https://github.com/achirkin/vulkan
    subdir:   vulkan-triangles
